# StructSplat

./: .gitignore  README.md  evaluation.py  pyproject.toml  requirements.txt  train.py
config/: dl3dv.yaml
dataset_annotations/: dl3dv_eva_src-2_tar-2.json  dl3dv_train_clean.json
src/callbacks/: gaussian_evaluation.py
src/data/: gaussian_data.py  utils.py
src/data/datasets/: dl3dv.py
src/loss/: gaussian_loss.py
src/model/: gaussian_prediction.py  gaussian_wrapper.py  group_dpt_head.py  semantic_encoder.py  texture_encoder.py  utils.py
src/train/: train_gaussian.py
src/utils/: utils_2d.py  utils_2d_111.py  utils_3d.py  utils_quaternion.py
structsplat/: config.py
structsplat/callbacks/: gaussian_training.py
structsplat/data/: gaussian_data.py  utils.py
structsplat/data/datasets/: dl3dv.py
structsplat/loss/: diff_op.py  gaussian_loss.py  utils.py
structsplat/model/: gaussian_prediction.py  gaussian_wrapper.py  group_dpt_head.py  semantic_encoder.py  texture_encoder.py  utils.py
structsplat/scheduler/: wsd.py
structsplat/train/: train_gaussian.py
structsplat/utils/: metrices.py  utils_3d.py
structsplat/vggt/heads/: camera_head.py
structsplat/vggt/models/: aggregator.py  vggt.py
structsplat/vggt/utils/: geometry.py
