[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
dependencies = [
    "einops>=0.8.2",
    "gsplat>=1.5.3",
    "huggingface-hub>=1.22.0",
    "jaxtyping>=0.3.7",
    "lpips>=0.1.4",
    "matplotlib>=3.10.9",
    "ml-collections>=1.1.0",
    "numpy<2",
    "pillow>=12.3.0",
    "prefetch-generator>=1.0.3",
    "pytorch-lightning>=2.6.5",
    "pyyaml>=6.0.3",
    "safetensors>=0.8.0",
    "scikit-image>=0.25.2",
    "torchmetrics>=1.9.0",
    "torchvision>=0.25.0",
    "transformers>=5.13.0",
]
name = "structsplat"
requires-python = ">= 3.10"
version = "0.0.1"

[tool.setuptools.packages.find]
include = ["structsplat*"]
where = ["."]
